cmake_minimum_required(VERSION 3.16)

SET(HIGH_LEVEL_SRC HighLevelSolver.cpp)
SET(LOW_LEVEL_SRC LowLevelSolver.cpp)
SET(TREE_NODE_SRC TreeNode.cpp)

INCLUDE_DIRECTORIES(/usr/include/cbs)

ADD_LIBRARY(HighLevelSolver SHARED ${HIGH_LEVEL_SRC})
INSTALL(TARGETS HighLevelSolver
    LIBRARY DESTINATION lib)

ADD_LIBRARY(LowLevelSolver SHARED ${LOW_LEVEL_SRC})
INSTALL(TARGETS LowLevelSolver
    LIBRARY DESTINATION lib)

ADD_LIBRARY(TreeNode SHARED ${TREE_NODE_SRC})
INSTALL(TARGETS TreeNode 
    LIBRARY DESTINATION lib)


TARGET_LINK_LIBRARIES(HighLevelSolver TreeNode)
TARGET_LINK_LIBRARIES(LowLevelSolver TreeNode)

INSTALL(FILES HighLevelSolver.h DESTINATION include/cbs)
INSTALL(FILES LowLevelSolver.h DESTINATION include/cbs)
INSTALL(FILES TreeNode.h DESTINATION include/cbs)
INSTALL(FILES util.h DESTINATION include/cbs)

